<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp" >

        <ListView
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" >
        </ListView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="256dp"
            android:layout_height="288dp"
            android:layout_weight="1"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In Host" />
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnEnrolToHost"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/EnrolHost"
                android:textSize="10sp"/>

            <Button
                android:id="@+id/btnCaptureToHost"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/CaptureHost"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btbMatcTemplate"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/Match"
                android:textSize="10sp" />
			
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

			<Button
                android:id="@+id/btnGetImage"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/getimage"
                android:textSize="10sp"  />			
			
			<Button
                android:id="@+id/btnCardTest"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/cardtest"
                android:textSize="10sp"  />			
					
			<Button
                android:id="@+id/btnFlashTest"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/flashtest"
                android:textSize="10sp"  />		
                	
        </LinearLayout>
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In Module" />
	        </LinearLayout>
    	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnEnrolInModule"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/EnrolID"
                android:textSize="10sp"  />

            <Button
                android:id="@+id/btnVerifyInModule"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/Verify"
                android:textSize="10sp"  />

            
            <Button
                android:id="@+id/btnIdentifyInModule"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/Identify"
                android:textSize="10sp"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnDeleteInModule"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/DeleteID"
                android:textSize="10sp"  />
            
            <Button
                android:id="@+id/btnClearInModule"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:text="@string/ClearID"
                android:textSize="10sp"  />

            <EditText
                android:id="@+id/editText1"
                style="android:editTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reader Information" />
        </LinearLayout>
    	
    	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                    
        	<LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" >

				<Button
                	android:id="@+id/btnLinkDevice"
                	android:layout_width="120dp"
                	android:layout_height="35dp"
                	android:text="@string/linkdevice"
                	android:textSize="10sp"  />
            			
            	<Button
                	android:id="@+id/btnGetSN"
                	android:layout_width="120dp"
                	android:layout_height="35dp"
                	android:text="@string/getdevsn"
                	android:textSize="10sp"  />         
                
            	<Button
                	android:id="@+id/btnGetBatVal"
                	android:layout_width="120dp"
                	android:layout_height="35dp"
                	android:text="@string/getbat"
                	android:textSize="10sp"  />
                        
        	</LinearLayout>
        	
        	<LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" >

				<Button
                	android:id="@+id/btnCloseDevice"
                	android:layout_width="120dp"
                	android:layout_height="35dp"
                	android:text="@string/closedevice"
                	android:textSize="10sp"  />
            			
            	<Button
                	android:id="@+id/btnGetVersion"
                	android:layout_width="120dp"
                	android:layout_height="35dp"
                	android:text="@string/getver"
                	android:textSize="10sp"  />                         
                        
        	</LinearLayout>
        	
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
